[feat] REST API > 회원기능 추가 진행
- openapi 문서 생성을 위한 InitController 추가
- 회원관련 기능 추가 (코드 정리 필요)
